--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -5,13 +5,6 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -91,3 +84,24 @@ body {
   animation: underline 1s ease-out 1.4s forwards;
   width: 0;
 }
+
+@keyframes color-sweep {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-color-sweep {
+    background: linear-gradient(90deg, #ff8181 0%,#ff8181 30%, #FFD93D 50%,#ff8181 70%,#ff8181 100%);
+    background-size: 300% 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: color-sweep 4s ease-in-out infinite;
+  }
