--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -18,6 +18,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Zoom al hacer hover sobre el header */
 .zoomonhover {  
   display: inline-block;
   transition: transform 0.4s ease;
@@ -27,6 +28,7 @@ body {
   transform: scale(1.1);
 }
 
+/* Efecto iluminación sobre texto descriptivo debajo de hi, im ezquiel */
 @keyframes text-sweep {
   0% {
     background-position: 0% 0;
@@ -50,6 +52,7 @@ body {
   animation: text-sweep 3s linear infinite;
 }
 
+/* Efecto de caer sobre "hi, im ezequiel"*/
 @keyframes drop-word {
   0% {
     transform: translateY(-100px);
@@ -65,6 +68,7 @@ body {
   }
 }
 
+/* Efecto subrayado sobre "hi, im ezequiel"*/
 .animate-drop-word {
   display: inline-block;
   animation: drop-word 1s ease-out forwards;
@@ -84,6 +88,7 @@ body {
   animation: underline 1s ease-out 1.4s forwards;
   width: 0;
 }
+/* Efecto colores sobre texto "tech-stack" */
 
 @keyframes color-sweep {
   0% {
@@ -105,3 +110,26 @@ body {
     -webkit-text-fill-color: transparent;
     animation: color-sweep 4s ease-in-out infinite;
   }
+
+
+/* Efecto hover sobre botones tech-stack, efecto gradiente */
+.tech-slide-hover {
+  position: relative;
+  overflow: hidden;
+}
+
+.tech-slide-hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(ellipse at top left, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.05) 80%, transparent 100%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.tech-slide-hover:hover::before {
+  opacity: 1;
+}
